[package]
name = "huffpuff"
version = "0.1.0"
authors = ["Hercules <hercosmith03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
crossbeam-utils = "0.7.2"
branchrs = { path = "../branchrs" }